Fix button whitespace wrapping

--- a/assets/styles/components/_button.scss
+++ b/assets/styles/components/_button.scss
@@ -20,6 +20,7 @@ button:focus {
   border-radius: 6px;
   display: inline-flex;
   font-size: 1.6rem;
+  white-space: nowrap;
   font-weight: 500;
   gap: 0.5em;
   justify-content: center;
